[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Mike Erickson <erimich@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
regex = "*"
lazy_static = "*"
num-traits = "*"
multimap = "*"
num = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "find_closing_paren"
harness = false

